# cob_navigation

cob_map_segmentation/: CMakeLists.txt  package.xml
cob_map_segmentation/ros/include/cob_map_segmentation/: map_segmentation_algorithm.h
cob_map_segmentation/ros/launch/: map_segmentation_action_server.launch
cob_map_segmentation/ros/src/: map_segmentation_action_client.cpp  map_segmentation_action_server.cpp
cob_map_segmentation/scripts/: map_segmentation_action_client.py
