<?xml version="1.0"?>
<package>
  <name>cob_map_segmentation</name>
  <version>0.0.1</version>
  <description>Tries to segmentate Map into Rooms</description>

  <maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
  <author>Richard Bormann, Mohammad Muinul Islam, Maximilian Sieber</author>
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>cv_bridge</run_depend> 
  <run_depend>boost</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>
